// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introspection via http 1`] = `
Api {
  "CustomJsonScalars": [],
  "DataSources": [
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "id",
            "name",
            "username",
          ],
          "typeName": "federated_User",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Query @extends {
  me: User
}

type User @key(fields: "id") {
  id: ID!
  name: String
  username: String
}
",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://accounts.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": false,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://accounts.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": """""""
type Query {
  me: User
}

""""""
type User {
  id: ID!
  name: String
  username: String
}",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "federated_me",
          ],
          "typeName": "Query",
        },
        {
          "fieldNames": [
            "id",
            "name",
            "username",
          ],
          "typeName": "federated_User",
        },
      ],
    },
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "id",
            "body",
            "author",
            "product",
          ],
          "typeName": "federated_Review",
        },
        {
          "fieldNames": [
            "id",
          ],
          "typeName": "federated_User",
        },
        {
          "fieldNames": [
            "upc",
          ],
          "typeName": "federated_Product",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Review @key(fields: "id") {
  id: ID!
  body: String
  author: User @provides(fields: "username")
  product: Product
}

type User @extends @key(fields: "id") {
  id: ID! @external
  username: String @external
  reviews: [Review]
}

type Product @extends @key(fields: "upc") {
  upc: String! @external
  reviews: [Review]
}
",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://reviews.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": false,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://reviews.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": """""""
type Product {
  reviews: [Review]
  upc: String!
}

""""""
type Query

""""""
type Review {
  author: User
  body: String
  id: ID!
  product: Product
}

""""""
type User {
  id: ID!
  reviews: [Review]
  username: String
}",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "id",
            "body",
            "author",
            "product",
          ],
          "typeName": "federated_Review",
        },
        {
          "fieldNames": [
            "reviews",
          ],
          "typeName": "federated_User",
        },
        {
          "fieldNames": [
            "reviews",
          ],
          "typeName": "federated_Product",
        },
      ],
    },
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "upc",
            "name",
            "price",
            "weight",
          ],
          "typeName": "federated_Product",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Query @extends {
  topProducts(first: Int = 5, random: Boolean): [Product]
}

type Product @key(fields: "upc") {
  upc: String!
  name: String
  price: Int
  weight: Int
}

type Subscription @extends {
  updatedPrice: Product!
}

type Mutation @extends {
  setPrice(upc: String!, price: Int!): Product
}",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://products.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": true,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://products.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": """""""
type Mutation {
  setPrice(price: Int!, upc: String!): Product
}

""""""
type Product {
  name: String
  price: Int
  upc: String!
  weight: Int
}

""""""
type Query {
  topProducts(first: Int = 5, random: Boolean): [Product]
}

""""""
type Subscription {
  updatedPrice: Product!
}",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "federated_topProducts",
          ],
          "typeName": "Query",
        },
        {
          "fieldNames": [
            "upc",
            "name",
            "price",
            "weight",
          ],
          "typeName": "federated_Product",
        },
        {
          "fieldNames": [
            "federated_updatedPrice",
          ],
          "typeName": "Subscription",
        },
        {
          "fieldNames": [
            "federated_setPrice",
          ],
          "typeName": "Mutation",
        },
      ],
    },
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "upc",
          ],
          "typeName": "federated_Product",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Product @extends @key(fields: "upc") {
    upc: String! @external
    weight: Int @external
    price: Int @external
    inStock: Boolean
    shippingEstimate: Int @requires(fields: "price weight")
}
",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://inventory.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": false,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://inventory.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": """""""
type Product {
  inStock: Boolean
  price: Int
  shippingEstimate: Int
  upc: String!
  weight: Int
}

""""""
type Query",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "inStock",
            "shippingEstimate",
          ],
          "typeName": "federated_Product",
        },
      ],
    },
    {
      "ChildNodes": [],
      "Custom": {
        "data": {
          "environmentVariableDefaultValue": "",
          "environmentVariableName": "",
          "kind": 0,
          "placeholderVariableName": "",
          "staticVariableContent": "{}",
        },
      },
      "Directives": [],
      "Kind": 0,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "_join",
          ],
          "typeName": "federated_User",
        },
      ],
    },
    {
      "ChildNodes": [],
      "Custom": {
        "data": {
          "environmentVariableDefaultValue": "",
          "environmentVariableName": "",
          "kind": 0,
          "placeholderVariableName": "",
          "staticVariableContent": "{}",
        },
      },
      "Directives": [],
      "Kind": 0,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "_join",
          ],
          "typeName": "federated_Product",
        },
      ],
    },
    {
      "ChildNodes": [],
      "Custom": {
        "data": {
          "environmentVariableDefaultValue": "",
          "environmentVariableName": "",
          "kind": 0,
          "placeholderVariableName": "",
          "staticVariableContent": "{}",
        },
      },
      "Directives": [],
      "Kind": 0,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "_join",
          ],
          "typeName": "federated_Review",
        },
      ],
    },
  ],
  "DefaultFlushInterval": 500,
  "Fields": [
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "name",
      "path": [
        "name",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "username",
      "path": [
        "username",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_me",
      "path": [
        "me",
      ],
      "requiresFields": [],
      "typeName": "Query",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "body",
      "path": [
        "body",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "author",
      "path": [
        "author",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "product",
      "path": [
        "product",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "reviews",
      "path": [
        "reviews",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "reviews",
      "path": [
        "reviews",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [
        {
          "name": "first",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
        {
          "name": "random",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
      ],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_topProducts",
      "path": [
        "topProducts",
      ],
      "requiresFields": [],
      "typeName": "Query",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "name",
      "path": [
        "name",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "price",
      "path": [
        "price",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "weight",
      "path": [
        "weight",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [
        {
          "name": "upc",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
        {
          "name": "price",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
      ],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_setPrice",
      "path": [
        "setPrice",
      ],
      "requiresFields": [],
      "typeName": "Mutation",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_updatedPrice",
      "path": [
        "updatedPrice",
      ],
      "requiresFields": [],
      "typeName": "Subscription",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "inStock",
      "path": [
        "inStock",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "shippingEstimate",
      "path": [
        "shippingEstimate",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": true,
      "fieldName": "_join",
      "path": [
        "_join",
      ],
      "requiresFields": [],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": true,
      "fieldName": "_join",
      "path": [
        "_join",
      ],
      "requiresFields": [],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": true,
      "fieldName": "_join",
      "path": [
        "_join",
      ],
      "requiresFields": [],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
  ],
  "Namespace": "",
  "Schema": """"
The @removeNullVariables directive allows you to remove variables with null value from your GraphQL Query or Mutation Operations.

A potential use-case could be that you have a graphql upstream which is not accepting null values for variables.
By enabling this directive all variables with null values will be removed from upstream query.

query ($say: String, $name: String) @removeNullVariables {
	hello(say: $say, name: $name)
}

Directive will transform variables json and remove top level null values.
{ "say": null, "name": "world" }

So upstream will receive the following variables:

{ "name": "world" }
"""
directive @removeNullVariables on QUERY | MUTATION

directive @hooksVariable on VARIABLE_DEFINITION

directive @jsonSchema(
  """
  The value of both of these keywords MUST be a string.
  
  Both of these keywords can be used to decorate a user interface with
  information about the data produced by this user interface.  A title
  will preferably be short, whereas a description will provide
  explanation about the purpose of the instance described by this
  schema.
  """
  title: String
  """
  The value of both of these keywords MUST be a string.
  
  Both of these keywords can be used to decorate a user interface with
  information about the data produced by this user interface.  A title
  will preferably be short, whereas a description will provide
  explanation about the purpose of the instance described by this
  schema.
  """
  description: String
  """
  The value of "multipleOf" MUST be a number, strictly greater than 0.
  
  A numeric instance is valid only if division by this keyword's value
  results in an integer.
  """
  multipleOf: Int
  """
  The value of "maximum" MUST be a number, representing an inclusive
  upper limit for a numeric instance.
  
  If the instance is a number, then this keyword validates only if the
  instance is less than or exactly equal to "maximum".
  """
  maximum: Int
  """
  The value of "exclusiveMaximum" MUST be number, representing an
  exclusive upper limit for a numeric instance.
  
  If the instance is a number, then the instance is valid only if it
  has a value strictly less than (not equal to) "exclusiveMaximum".
  """
  exclusiveMaximum: Int
  """
  The value of "minimum" MUST be a number, representing an inclusive
  lower limit for a numeric instance.
  
  If the instance is a number, then this keyword validates only if the
  instance is greater than or exactly equal to "minimum".
  """
  minimum: Int
  """
  The value of "exclusiveMinimum" MUST be number, representing an
  exclusive lower limit for a numeric instance.
  
  If the instance is a number, then the instance is valid only if it
  has a value strictly greater than (not equal to) "exclusiveMinimum".
  """
  exclusiveMinimum: Int
  """
  The value of this keyword MUST be a non-negative integer.
  
  A string instance is valid against this keyword if its length is less
  than, or equal to, the value of this keyword.
  
  The length of a string instance is defined as the number of its
  characters as defined by RFC 7159 [RFC7159].
  """
  maxLength: Int
  """
  The value of this keyword MUST be a non-negative integer.
  
  A string instance is valid against this keyword if its length is
  greater than, or equal to, the value of this keyword.
  
  The length of a string instance is defined as the number of its
  characters as defined by RFC 7159 [RFC7159].
  
  Omitting this keyword has the same behavior as a value of 0.
  """
  minLength: Int
  """
  The value of this keyword MUST be a string.  This string SHOULD be a
  valid regular expression, according to the ECMA 262 regular
  expression dialect.
  
  A string instance is considered valid if the regular expression
  matches the instance successfully.  Recall: regular expressions are
  not implicitly anchored.
  """
  pattern: String
  """
  The value of this keyword MUST be a non-negative integer.
  
  An array instance is valid against "maxItems" if its size is less
  than, or equal to, the value of this keyword.
  """
  maxItems: Int
  """
  The value of this keyword MUST be a non-negative integer.
  
  An array instance is valid against "minItems" if its size is greater
  than, or equal to, the value of this keyword.
  
  Omitting this keyword has the same behavior as a value of 0.
  """
  minItems: Int
  """
  The value of this keyword MUST be a boolean.
  
  If this keyword has boolean value false, the instance validates
  successfully.  If it has boolean value true, the instance validates
  successfully if all of its elements are unique.
  
  Omitting this keyword has the same behavior as a value of false.
  """
  uniqueItems: Boolean
  commonPattern: COMMON_REGEX_PATTERN
  """Optional field to apply the JSON schema to"""
  on: String
) repeatable on VARIABLE_DEFINITION

"""
The @fromClaim directive sets the variable to the value retrieved from the given a claim.
Adding this directive makes the operation require authentication.
"""
directive @fromClaim(name: WG_CLAIM, on: String = "") repeatable on VARIABLE_DEFINITION

"""
The directive @injectCurrentDateTime injects a DateTime string of the current date and time into the variable.
This variable MUST be a string compatible scalar. 

The default format, is: ISO 8601
If no format is chosen, the default format is used.
Custom formats are allowed by specifying a format conforming to the Golang specification for specifying a date time format.
"""
directive @injectCurrentDateTime(
  format: WunderGraphDateTimeFormat = ISO8601
  """
  customFormat must conform to the Golang specification for specifying a date time format
  """
  customFormat: String
  on: String = ""
) repeatable on VARIABLE_DEFINITION

"""
The directive @injectGeneratedUUID injects a generated UUID into the variable.
This variable MUST be a string.
At the same time, it removes the variable from the input definition,
disallowing the user to supply it.

This means, the UUID is 100% generated server-side and can be considered untempered.
"""
directive @injectGeneratedUUID(on: String = "") repeatable on VARIABLE_DEFINITION

"""
The @internalOperation Directive marks an Operation as internal.
By doing so, the Operation is no longer accessible from the public API.
It can only be accessed by internal services, like hooks.
"""
directive @internalOperation on QUERY | MUTATION | SUBSCRIPTION

"""
The directive @injectEnvironmentVariable allows you to inject an environment variable into the variable definition.
"""
directive @injectEnvironmentVariable(name: String!, on: String = "") repeatable on VARIABLE_DEFINITION

"""
The @export directive instructs the Execution Planner to export the field during the execution into the variable of the 'as' argument.
As the execution is depth first, a field can only be used after it has been exported.
Additionally, a field can only be used after using the '_join' field or on a different data source.
It's not possible to export a field and use it in for the same data source.

Note that the @export directive only works on fields that return a single value.
It's not possible to export a list or object field.
"""
directive @export(
  """The argument 'as' is the name of the variable to export the field to."""
  as: String!
) on FIELD

"""
The directive @internal marks a variable definition as internal so that clients can't access it.
The field is also not visible in the public API.
It's only being used as an internal variable to export fields into.
"""
directive @internal on VARIABLE_DEFINITION

"""
The @transform directive allows to apply transformations to the response.
By applying the directive, the shape of the response can be altered,
which will also modify the JSON-Schema of the response.
That is, you will keep full type safety and code-generation for transformed fields.
"""
directive @transform(
  """
  Using the 'get' transformation allows you to extract a nested field using a JSON path.
  This is useful to unnest data, e.g. when using the '_join' field, which adds an extra layer of nesting.
  
  Example:
  
  query GetName {
      name: me @transform(get: "info.name") {
          info {
              name
          }
      }
  }
  
  Before the transformation, the resolve looks like this:
  
  {
      "name": {
          "info": {
              "name": "John Doe"
          }
      }
  }
  
  With the transformation applied, the response will be reshaped like this:
  
  {
      "name": "John Doe"
  }
  """
  get: String
) on FIELD

type Query {
  federated_me: federated_User
  federated_topProducts(first: Int = 5, random: Boolean): [federated_Product]
}

type federated_User {
  id: ID!
  name: String
  username: String
  reviews: [federated_Review]
  _join: Query!
}

type federated_Product {
  reviews: [federated_Review]
  upc: String!
  name: String
  price: Int
  weight: Int
  inStock: Boolean
  shippingEstimate: Int
  _join: Query!
}

type federated_Review {
  author: federated_User
  body: String
  id: ID!
  product: federated_Product
  _join: Query!
}

type Mutation {
  federated_setPrice(price: Int!, upc: String!): federated_Product
}

type Subscription {
  federated_updatedPrice: federated_Product!
}

enum COMMON_REGEX_PATTERN {
  EMAIL
  DOMAIN
}

"""Well known claims - https://www.iana.org/assignments/jwt/jwt.xhtml"""
enum WG_CLAIM {
  """iss"""
  ISSUER
  """deprecated alias for ISSUER"""
  PROVIDER
  """sub"""
  SUBJECT
  """alias for sub"""
  USERID
  """name"""
  NAME
  """given_name"""
  GIVEN_NAME
  """family_name"""
  FAMILY_NAME
  """middle_name"""
  MIDDLE_NAME
  """nickname"""
  NICKNAME
  """preferred_username"""
  PREFERRED_USERNAME
  """profile"""
  PROFILE
  """picture"""
  PICTURE
  """website"""
  WEBSITE
  """email"""
  EMAIL
  """email_verified"""
  EMAIL_VERIFIED
  """gender"""
  GENDER
  """birthdate"""
  BIRTH_DATE
  """zoneinfo"""
  ZONE_INFO
  """locale"""
  LOCALE
  """location"""
  LOCATION
}

enum WunderGraphDateTimeFormat {
  """2006-01-02T15:04:05-0700"""
  ISO8601
  """Mon Jan _2 15:04:05 2006"""
  ANSIC
  """Mon Jan _2 15:04:05 MST 2006"""
  UnixDate
  """Mon Jan 02 15:04:05 -0700 2006"""
  RubyDate
  """02 Jan 06 15:04 MST"""
  RFC822
  """02 Jan 06 15:04 -0700"""
  RFC822Z
  """Monday, 02-Jan-06 15:04:05 MST"""
  RFC850
  """Mon, 02 Jan 2006 15:04:05 MST"""
  RFC1123
  """Mon, 02 Jan 2006 15:04:05 -0700"""
  RFC1123Z
  """2006-01-02T15:04:05Z07:00"""
  RFC3339
  """2006-01-02T15:04:05.999999999Z07:00"""
  RFC3339Nano
  """3:04PM"""
  Kitchen
  """Jan _2 15:04:05"""
  Stamp
  """Jan _2 15:04:05.000"""
  StampMilli
  """Jan _2 15:04:05.000000"""
  StampMicro
  """Jan _2 15:04:05.000000000"""
  StampNano
}",
  "Types": [
    {
      "renameTo": "User",
      "typeName": "federated_User",
    },
    {
      "renameTo": "Product",
      "typeName": "federated_Product",
    },
    {
      "renameTo": "Review",
      "typeName": "federated_Review",
    },
  ],
  "interpolateVariableDefinitionAsJSON": [],
}
`;

exports[`introspection via string 1`] = `
Api {
  "CustomJsonScalars": [],
  "DataSources": [
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "id",
            "name",
            "username",
          ],
          "typeName": "federated_User",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Query @extends {
  me: User
}

type User @key(fields: "id") {
  id: ID!
  name: String
  username: String
}
",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://accounts.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": false,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://accounts.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": "type Query {
  me: User
}

type User {
  id: ID!
  name: String
  username: String
}",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "federated_me",
          ],
          "typeName": "Query",
        },
        {
          "fieldNames": [
            "id",
            "name",
            "username",
          ],
          "typeName": "federated_User",
        },
      ],
    },
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "id",
            "body",
            "author",
            "product",
          ],
          "typeName": "federated_Review",
        },
        {
          "fieldNames": [
            "id",
          ],
          "typeName": "federated_User",
        },
        {
          "fieldNames": [
            "upc",
          ],
          "typeName": "federated_Product",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Review @key(fields: "id") {
  id: ID!
  body: String
  author: User @provides(fields: "username")
  product: Product
}

type User @extends @key(fields: "id") {
  id: ID! @external
  username: String @external
  reviews: [Review]
}

type Product @extends @key(fields: "upc") {
  upc: String! @external
  reviews: [Review]
}
",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://reviews.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": false,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://reviews.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": "type Product {
  reviews: [Review]
  upc: String!
}

type Query

type Review {
  author: User
  body: String
  id: ID!
  product: Product
}

type User {
  id: ID!
  reviews: [Review]
  username: String
}",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "id",
            "body",
            "author",
            "product",
          ],
          "typeName": "federated_Review",
        },
        {
          "fieldNames": [
            "reviews",
          ],
          "typeName": "federated_User",
        },
        {
          "fieldNames": [
            "reviews",
          ],
          "typeName": "federated_Product",
        },
      ],
    },
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "upc",
            "name",
            "price",
            "weight",
          ],
          "typeName": "federated_Product",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Query @extends {
  topProducts(first: Int = 5, random: Boolean): [Product]
}

type Product @key(fields: "upc") {
  upc: String!
  name: String
  price: Int
  weight: Int
}

type Subscription @extends {
  updatedPrice: Product!
}

type Mutation @extends {
  setPrice(upc: String!, price: Int!): Product
}",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://products.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": true,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://products.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": "type Mutation {
  setPrice(price: Int!, upc: String!): Product
}

type Product {
  name: String
  price: Int
  upc: String!
  weight: Int
}

type Query {
  topProducts(first: Int = 5, random: Boolean): [Product]
}

type Subscription {
  updatedPrice: Product!
}",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "federated_topProducts",
          ],
          "typeName": "Query",
        },
        {
          "fieldNames": [
            "upc",
            "name",
            "price",
            "weight",
          ],
          "typeName": "federated_Product",
        },
        {
          "fieldNames": [
            "federated_updatedPrice",
          ],
          "typeName": "Subscription",
        },
        {
          "fieldNames": [
            "federated_setPrice",
          ],
          "typeName": "Mutation",
        },
      ],
    },
    {
      "ChildNodes": [
        {
          "fieldNames": [
            "upc",
          ],
          "typeName": "federated_Product",
        },
      ],
      "Custom": {
        "CustomScalarTypeFields": [],
        "Federation": {
          "Enabled": true,
          "ServiceSDL": "type Product @extends @key(fields: "upc") {
    upc: String! @external
    weight: Int @external
    price: Int @external
    inStock: Boolean
    shippingEstimate: Int @requires(fields: "price weight")
}
",
        },
        "Fetch": {
          "baseUrl": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "body": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "header": {},
          "mTLS": undefined,
          "method": 1,
          "path": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "",
          },
          "query": [],
          "upstreamAuthentication": undefined,
          "url": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://inventory.service/graphql",
          },
          "urlEncodeBody": false,
        },
        "HooksConfiguration": {
          "onWSTransportConnectionInit": false,
        },
        "Subscription": {
          "Enabled": false,
          "URL": {
            "environmentVariableDefaultValue": "",
            "environmentVariableName": "",
            "kind": 0,
            "placeholderVariableName": "",
            "staticVariableContent": "http://inventory.service/graphql",
          },
          "UseSSE": false,
        },
        "UpstreamSchema": "type Product {
  inStock: Boolean
  price: Int
  shippingEstimate: Int
  upc: String!
  weight: Int
}

type Query",
      },
      "Directives": [
        {
          "directiveName": "federated_extends",
          "renameTo": "extends",
        },
        {
          "directiveName": "federated_external",
          "renameTo": "external",
        },
        {
          "directiveName": "federated_key",
          "renameTo": "key",
        },
        {
          "directiveName": "federated_provides",
          "renameTo": "provides",
        },
        {
          "directiveName": "federated_requires",
          "renameTo": "requires",
        },
      ],
      "Id": undefined,
      "Kind": 2,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "inStock",
            "shippingEstimate",
          ],
          "typeName": "federated_Product",
        },
      ],
    },
    {
      "ChildNodes": [],
      "Custom": {
        "data": {
          "environmentVariableDefaultValue": "",
          "environmentVariableName": "",
          "kind": 0,
          "placeholderVariableName": "",
          "staticVariableContent": "{}",
        },
      },
      "Directives": [],
      "Kind": 0,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "_join",
          ],
          "typeName": "federated_User",
        },
      ],
    },
    {
      "ChildNodes": [],
      "Custom": {
        "data": {
          "environmentVariableDefaultValue": "",
          "environmentVariableName": "",
          "kind": 0,
          "placeholderVariableName": "",
          "staticVariableContent": "{}",
        },
      },
      "Directives": [],
      "Kind": 0,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "_join",
          ],
          "typeName": "federated_Product",
        },
      ],
    },
    {
      "ChildNodes": [],
      "Custom": {
        "data": {
          "environmentVariableDefaultValue": "",
          "environmentVariableName": "",
          "kind": 0,
          "placeholderVariableName": "",
          "staticVariableContent": "{}",
        },
      },
      "Directives": [],
      "Kind": 0,
      "RequestTimeoutSeconds": 0,
      "RootNodes": [
        {
          "fieldNames": [
            "_join",
          ],
          "typeName": "federated_Review",
        },
      ],
    },
  ],
  "DefaultFlushInterval": 500,
  "Fields": [
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "name",
      "path": [
        "name",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "username",
      "path": [
        "username",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_me",
      "path": [
        "me",
      ],
      "requiresFields": [],
      "typeName": "Query",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "body",
      "path": [
        "body",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "author",
      "path": [
        "author",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "product",
      "path": [
        "product",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "reviews",
      "path": [
        "reviews",
      ],
      "requiresFields": [
        "id",
      ],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "reviews",
      "path": [
        "reviews",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [
        {
          "name": "first",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
        {
          "name": "random",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
      ],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_topProducts",
      "path": [
        "topProducts",
      ],
      "requiresFields": [],
      "typeName": "Query",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "name",
      "path": [
        "name",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "price",
      "path": [
        "price",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "weight",
      "path": [
        "weight",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [
        {
          "name": "upc",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
        {
          "name": "price",
          "renameTypeTo": "",
          "renderConfiguration": 0,
          "sourcePath": [],
          "sourceType": 1,
        },
      ],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_setPrice",
      "path": [
        "setPrice",
      ],
      "requiresFields": [],
      "typeName": "Mutation",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "federated_updatedPrice",
      "path": [
        "updatedPrice",
      ],
      "requiresFields": [],
      "typeName": "Subscription",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "inStock",
      "path": [
        "inStock",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": false,
      "fieldName": "shippingEstimate",
      "path": [
        "shippingEstimate",
      ],
      "requiresFields": [
        "upc",
      ],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": true,
      "fieldName": "_join",
      "path": [
        "_join",
      ],
      "requiresFields": [],
      "typeName": "federated_User",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": true,
      "fieldName": "_join",
      "path": [
        "_join",
      ],
      "requiresFields": [],
      "typeName": "federated_Product",
      "unescapeResponseJson": false,
    },
    {
      "argumentsConfiguration": [],
      "disableDefaultFieldMapping": true,
      "fieldName": "_join",
      "path": [
        "_join",
      ],
      "requiresFields": [],
      "typeName": "federated_Review",
      "unescapeResponseJson": false,
    },
  ],
  "Namespace": "",
  "Schema": """"
The @removeNullVariables directive allows you to remove variables with null value from your GraphQL Query or Mutation Operations.

A potential use-case could be that you have a graphql upstream which is not accepting null values for variables.
By enabling this directive all variables with null values will be removed from upstream query.

query ($say: String, $name: String) @removeNullVariables {
	hello(say: $say, name: $name)
}

Directive will transform variables json and remove top level null values.
{ "say": null, "name": "world" }

So upstream will receive the following variables:

{ "name": "world" }
"""
directive @removeNullVariables on QUERY | MUTATION

directive @hooksVariable on VARIABLE_DEFINITION

directive @jsonSchema(
  """
  The value of both of these keywords MUST be a string.
  
  Both of these keywords can be used to decorate a user interface with
  information about the data produced by this user interface.  A title
  will preferably be short, whereas a description will provide
  explanation about the purpose of the instance described by this
  schema.
  """
  title: String
  """
  The value of both of these keywords MUST be a string.
  
  Both of these keywords can be used to decorate a user interface with
  information about the data produced by this user interface.  A title
  will preferably be short, whereas a description will provide
  explanation about the purpose of the instance described by this
  schema.
  """
  description: String
  """
  The value of "multipleOf" MUST be a number, strictly greater than 0.
  
  A numeric instance is valid only if division by this keyword's value
  results in an integer.
  """
  multipleOf: Int
  """
  The value of "maximum" MUST be a number, representing an inclusive
  upper limit for a numeric instance.
  
  If the instance is a number, then this keyword validates only if the
  instance is less than or exactly equal to "maximum".
  """
  maximum: Int
  """
  The value of "exclusiveMaximum" MUST be number, representing an
  exclusive upper limit for a numeric instance.
  
  If the instance is a number, then the instance is valid only if it
  has a value strictly less than (not equal to) "exclusiveMaximum".
  """
  exclusiveMaximum: Int
  """
  The value of "minimum" MUST be a number, representing an inclusive
  lower limit for a numeric instance.
  
  If the instance is a number, then this keyword validates only if the
  instance is greater than or exactly equal to "minimum".
  """
  minimum: Int
  """
  The value of "exclusiveMinimum" MUST be number, representing an
  exclusive lower limit for a numeric instance.
  
  If the instance is a number, then the instance is valid only if it
  has a value strictly greater than (not equal to) "exclusiveMinimum".
  """
  exclusiveMinimum: Int
  """
  The value of this keyword MUST be a non-negative integer.
  
  A string instance is valid against this keyword if its length is less
  than, or equal to, the value of this keyword.
  
  The length of a string instance is defined as the number of its
  characters as defined by RFC 7159 [RFC7159].
  """
  maxLength: Int
  """
  The value of this keyword MUST be a non-negative integer.
  
  A string instance is valid against this keyword if its length is
  greater than, or equal to, the value of this keyword.
  
  The length of a string instance is defined as the number of its
  characters as defined by RFC 7159 [RFC7159].
  
  Omitting this keyword has the same behavior as a value of 0.
  """
  minLength: Int
  """
  The value of this keyword MUST be a string.  This string SHOULD be a
  valid regular expression, according to the ECMA 262 regular
  expression dialect.
  
  A string instance is considered valid if the regular expression
  matches the instance successfully.  Recall: regular expressions are
  not implicitly anchored.
  """
  pattern: String
  """
  The value of this keyword MUST be a non-negative integer.
  
  An array instance is valid against "maxItems" if its size is less
  than, or equal to, the value of this keyword.
  """
  maxItems: Int
  """
  The value of this keyword MUST be a non-negative integer.
  
  An array instance is valid against "minItems" if its size is greater
  than, or equal to, the value of this keyword.
  
  Omitting this keyword has the same behavior as a value of 0.
  """
  minItems: Int
  """
  The value of this keyword MUST be a boolean.
  
  If this keyword has boolean value false, the instance validates
  successfully.  If it has boolean value true, the instance validates
  successfully if all of its elements are unique.
  
  Omitting this keyword has the same behavior as a value of false.
  """
  uniqueItems: Boolean
  commonPattern: COMMON_REGEX_PATTERN
  """Optional field to apply the JSON schema to"""
  on: String
) repeatable on VARIABLE_DEFINITION

"""
The @fromClaim directive sets the variable to the value retrieved from the given a claim.
Adding this directive makes the operation require authentication.
"""
directive @fromClaim(name: WG_CLAIM, on: String = "") repeatable on VARIABLE_DEFINITION

"""
The directive @injectCurrentDateTime injects a DateTime string of the current date and time into the variable.
This variable MUST be a string compatible scalar. 

The default format, is: ISO 8601
If no format is chosen, the default format is used.
Custom formats are allowed by specifying a format conforming to the Golang specification for specifying a date time format.
"""
directive @injectCurrentDateTime(
  format: WunderGraphDateTimeFormat = ISO8601
  """
  customFormat must conform to the Golang specification for specifying a date time format
  """
  customFormat: String
  on: String = ""
) repeatable on VARIABLE_DEFINITION

"""
The directive @injectGeneratedUUID injects a generated UUID into the variable.
This variable MUST be a string.
At the same time, it removes the variable from the input definition,
disallowing the user to supply it.

This means, the UUID is 100% generated server-side and can be considered untempered.
"""
directive @injectGeneratedUUID(on: String = "") repeatable on VARIABLE_DEFINITION

"""
The @internalOperation Directive marks an Operation as internal.
By doing so, the Operation is no longer accessible from the public API.
It can only be accessed by internal services, like hooks.
"""
directive @internalOperation on QUERY | MUTATION | SUBSCRIPTION

"""
The directive @injectEnvironmentVariable allows you to inject an environment variable into the variable definition.
"""
directive @injectEnvironmentVariable(name: String!, on: String = "") repeatable on VARIABLE_DEFINITION

"""
The @export directive instructs the Execution Planner to export the field during the execution into the variable of the 'as' argument.
As the execution is depth first, a field can only be used after it has been exported.
Additionally, a field can only be used after using the '_join' field or on a different data source.
It's not possible to export a field and use it in for the same data source.

Note that the @export directive only works on fields that return a single value.
It's not possible to export a list or object field.
"""
directive @export(
  """The argument 'as' is the name of the variable to export the field to."""
  as: String!
) on FIELD

"""
The directive @internal marks a variable definition as internal so that clients can't access it.
The field is also not visible in the public API.
It's only being used as an internal variable to export fields into.
"""
directive @internal on VARIABLE_DEFINITION

"""
The @transform directive allows to apply transformations to the response.
By applying the directive, the shape of the response can be altered,
which will also modify the JSON-Schema of the response.
That is, you will keep full type safety and code-generation for transformed fields.
"""
directive @transform(
  """
  Using the 'get' transformation allows you to extract a nested field using a JSON path.
  This is useful to unnest data, e.g. when using the '_join' field, which adds an extra layer of nesting.
  
  Example:
  
  query GetName {
      name: me @transform(get: "info.name") {
          info {
              name
          }
      }
  }
  
  Before the transformation, the resolve looks like this:
  
  {
      "name": {
          "info": {
              "name": "John Doe"
          }
      }
  }
  
  With the transformation applied, the response will be reshaped like this:
  
  {
      "name": "John Doe"
  }
  """
  get: String
) on FIELD

type Query {
  federated_me: federated_User
  federated_topProducts(first: Int = 5, random: Boolean): [federated_Product]
}

type federated_User {
  id: ID!
  name: String
  username: String
  reviews: [federated_Review]
  _join: Query!
}

type federated_Product {
  reviews: [federated_Review]
  upc: String!
  name: String
  price: Int
  weight: Int
  inStock: Boolean
  shippingEstimate: Int
  _join: Query!
}

type federated_Review {
  author: federated_User
  body: String
  id: ID!
  product: federated_Product
  _join: Query!
}

type Mutation {
  federated_setPrice(price: Int!, upc: String!): federated_Product
}

type Subscription {
  federated_updatedPrice: federated_Product!
}

enum COMMON_REGEX_PATTERN {
  EMAIL
  DOMAIN
}

"""Well known claims - https://www.iana.org/assignments/jwt/jwt.xhtml"""
enum WG_CLAIM {
  """iss"""
  ISSUER
  """deprecated alias for ISSUER"""
  PROVIDER
  """sub"""
  SUBJECT
  """alias for sub"""
  USERID
  """name"""
  NAME
  """given_name"""
  GIVEN_NAME
  """family_name"""
  FAMILY_NAME
  """middle_name"""
  MIDDLE_NAME
  """nickname"""
  NICKNAME
  """preferred_username"""
  PREFERRED_USERNAME
  """profile"""
  PROFILE
  """picture"""
  PICTURE
  """website"""
  WEBSITE
  """email"""
  EMAIL
  """email_verified"""
  EMAIL_VERIFIED
  """gender"""
  GENDER
  """birthdate"""
  BIRTH_DATE
  """zoneinfo"""
  ZONE_INFO
  """locale"""
  LOCALE
  """location"""
  LOCATION
}

enum WunderGraphDateTimeFormat {
  """2006-01-02T15:04:05-0700"""
  ISO8601
  """Mon Jan _2 15:04:05 2006"""
  ANSIC
  """Mon Jan _2 15:04:05 MST 2006"""
  UnixDate
  """Mon Jan 02 15:04:05 -0700 2006"""
  RubyDate
  """02 Jan 06 15:04 MST"""
  RFC822
  """02 Jan 06 15:04 -0700"""
  RFC822Z
  """Monday, 02-Jan-06 15:04:05 MST"""
  RFC850
  """Mon, 02 Jan 2006 15:04:05 MST"""
  RFC1123
  """Mon, 02 Jan 2006 15:04:05 -0700"""
  RFC1123Z
  """2006-01-02T15:04:05Z07:00"""
  RFC3339
  """2006-01-02T15:04:05.999999999Z07:00"""
  RFC3339Nano
  """3:04PM"""
  Kitchen
  """Jan _2 15:04:05"""
  Stamp
  """Jan _2 15:04:05.000"""
  StampMilli
  """Jan _2 15:04:05.000000"""
  StampMicro
  """Jan _2 15:04:05.000000000"""
  StampNano
}",
  "Types": [
    {
      "renameTo": "User",
      "typeName": "federated_User",
    },
    {
      "renameTo": "Product",
      "typeName": "federated_Product",
    },
    {
      "renameTo": "Review",
      "typeName": "federated_Review",
    },
  ],
  "interpolateVariableDefinitionAsJSON": [],
}
`;
